# n32l43x

./: .clang-format  .gitignore  .gitmodules  README.md  meson.build  meson_options.txt  n32l40x.ld  n32l43x.ld
.devcontainer/: devcontainer.json  docker-compose.yml
applications/: bsp.c  bsp.h  main.c  meson.build  test.c
applications/hello/: blinky.c  blinky.h
drivers/: board.c  board.h  drv_gpio.c  drv_lptimer.c  drv_lptimer.h  drv_lpuart.c  drv_lpuart.h  drv_pm.c  drv_pm.h  drv_usart.c  irq.c  led.c  led.h  lpuart.c  lpuart.h  meson.build
firmware/: meson.build
firmware/CMSIS/core/: cmsis_compiler.h
firmware/CMSIS/device/: n32l43x.h  n32l43x_conf.h  system_n32l40x.c  system_n32l43x.c  system_n32l43x.h
firmware/CMSIS/device/startup/: startup_n32l40x_gcc.s  startup_n32l43x_gcc.s
firmware/n32l40x_std_periph_driver/inc/: n32l40x_pwr.h
firmware/n32l40x_std_periph_driver/src/: n32l40x_adc.c  n32l40x_pwr.c  n32l40x_rtc.c
firmware/n32l43x_algo_lib/inc/: n32l43x_aes.h  n32l43x_algo_common.h  n32l43x_des.h  n32l43x_hash.h  n32l43x_rng.h
firmware/n32l43x_periph_lib/inc/: RCC_MSI_Trimming.h
firmware/n32l43x_periph_lib/lib/: RCC_MSI_Trimming.lib
firmware/n32l43x_std_periph_driver/inc/: misc.h  n32l43x_adc.h  n32l43x_can.h  n32l43x_comp.h  n32l43x_crc.h  n32l43x_dac.h  n32l43x_dbg.h  n32l43x_dma.h  n32l43x_exti.h  n32l43x_flash.h  n32l43x_gpio.h  n32l43x_i2c.h  n32l43x_iwdg.h  n32l43x_lcd.h  n32l43x_lptim.h  n32l43x_lpuart.h  n32l43x_opamp.h  n32l43x_pwr.h  n32l43x_rcc.h  n32l43x_rtc.h  n32l43x_spi.h  n32l43x_tim.h  n32l43x_usart.h  n32l43x_wwdg.h
firmware/n32l43x_std_periph_driver/src/: misc.c  n32l43x_adc.c  n32l43x_can.c  n32l43x_comp.c  n32l43x_crc.c  n32l43x_dac.c  n32l43x_dbg.c  n32l43x_dma.c  n32l43x_exti.c  n32l43x_flash.c  n32l43x_gpio.c  n32l43x_i2c.c  n32l43x_iwdg.c  n32l43x_lcd.c  n32l43x_lprcnt.c  n32l43x_lptim.c  n32l43x_lpuart.c  n32l43x_opamp.c  n32l43x_pwr.c  n32l43x_rcc.c  n32l43x_rtc.c  n32l43x_spi.c  n32l43x_tim.c  n32l43x_usart.c  n32l43x_wwdg.c
firmware/n32l43x_usbfs_driver/inc/: usb_core.h  usb_def.h  usb_init.h  usb_int.h  usb_mem.h  usb_regs.h  usb_sil.h  usb_type.h
middlewares/cm_backtrace/: cmb_port.c  cmb_user_cfg.h  meson.build
middlewares/easylogger/: meson.build
middlewares/easylogger/inc/: elog_cfg.h
middlewares/easylogger/port/: elog_port.c
middlewares/multibutton/: LICENSE  README.md  meson.build  multi_button.c  multi_button.h
middlewares/qpc/: meson.build
rtos/: meson.build
rtos/port/: rtconfig.h
tools/: flash.jlink
tools/flash_algo/: N32L43x.FLM
tools/svd/: N32L402.svd  N32L403.svd  N32L406.svd
tools/toolchains/: arm-none-eabi-gcc.txt
utilities/cm_backtrace/: cmb_cfg.h
