option('TARGET_PLATFORM',
  type: 'string',
  value: 'n32l40x',
  description: 'Target platform name')

option('N32_ALGO_LIB',
  type: 'boolean',
  value: false,
  description: 'Enable algorithm library')

option('N32_USBFS_DRV',
  type: 'boolean',
  value: false,
  description: 'Enable USBFS driver')
