option('TARGET_PLATFORM',
  type: 'string',
  value: 'n32l40x',
  description: 'Target platform name')

option('TARGET_USE_LOG',
  type: 'boolean',
  value: true,
  description: 'Enable log')

option('N32_ALGO_LIB',
  type: 'boolean',
  value: false,
  description: 'Enable algorithm library')

option('N32_USBFS_DRV',
  type: 'boolean',
  value: false,
  description: 'Enable USBFS driver')

option('JLINK_REMOTE',
  type: 'string',
  value: 'disabled',
  description: 'Enable JLink remote debug')