# 驱动包含目录
drivers_incdirs = include_directories(
  '.',
)

# 驱动源文件
drivers_sources = files(
    'board.c',
#   'drv_adc.c',
#   'drv_can.c',
#   'drv_dac.c',
  'drv_gpio.c',
#   'drv_hwtimer.c',
#   'drv_i2c.c',
  'drv_lptimer.c',
  'drv_lpuart.c',
  'drv_pm.c',
#   'drv_rtc.c',
#   'drv_spi.c',
  # 'drv_usart.c',
#   'drv_wdt.c'
)
