qpc_incdirs = include_directories(
  'include',
  'ports/arm-cm/config',
  'ports/arm-cm/qv/gnu',
)

# QP 核心源文件
qp_sources = files(
  'src/qf/qep_hsm.c',
  'src/qf/qep_msm.c', 
  'src/qf/qf_act.c',
  'src/qf/qf_actq.c',
  'src/qf/qf_defer.c', 
  'src/qf/qf_dyn.c',
  'src/qf/qf_mem.c',
  'src/qf/qf_ps.c',
  'src/qf/qf_qact.c',
  'src/qf/qf_qeq.c',
  'src/qf/qf_qmact.c',
  'src/qf/qf_time.c',
  'src/qv/qv.c',
  'ports/arm-cm/qv/gnu/qv_port.c'
)